# custom-gpt-image-2-api

./: .comfyignore  .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  api_client.py  config_node.py  nodes_gpt_image.py  nodes_gpt_image2.py  nodes_nano_banana.py  pyproject.toml  size_node.py  test_api.py  test_validation.py
.github/workflows/: publish_action.yml
docs/: comfyui-custom-node-development.md  usage-and-security.md
web/: gpt_image_config_security.js
