[project]
name = "custom-gpt-image-2-api"
description = "ComfyUI custom nodes for GPT-Image (gpt-image-2 and OpenAI-compatible image models). Text-to-image via /images/generations and image editing with up to 8 reference images via /images/edits. User-supplied base_url and api_key, no preset gateway."
version = "3.1.0"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "Pillow",
    "numpy",
]
keywords = [
    "comfyui",
    "gpt-image",
    "gpt-image-2",
    "gpt-image2",
    "openai-compatible",
    "image-generation",
    "image-editing",
    "text-to-image",
    "image-to-image",
]

[project.urls]
Repository = "https://github.com/meomeo-dev/custom-gpt-image-2-api"

[tool.comfy]
PublisherId = "meomeo-dev"
DisplayName = "GPT-Image (OpenAI-compatible)"
Icon = ""
